# heyyy

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  STANDALONE_INSTALLER.md  build.bat  build.sh  build_and_install.bat  setup.bat  setup.sh  standalone_installer.bat  standalone_installer.sh  test_installer.bat
src/: DXGIHook.cpp  DXGIHook.h  FiveMCapture.cpp  FiveMCapture.h  FrameCapture.cpp  FrameCapture.h  ProjectionWindow.cpp  ProjectionWindow.h  UI.cpp  UI.h  application.cpp  application.h  frame_projector.cpp  frame_projector.h  injection_manager.cpp  injection_manager.h  main.cpp  monitor_manager.cpp  monitor_manager.h  platform_compat.h  resource.rc  shared_memory.cpp  shared_memory.h  shared_texture.cpp  shared_texture.h
src/hook/: d3d11_hook.cpp  d3d11_hook.h  frame_capture.cpp  frame_capture.h  hook_main.cpp
